css/main.css
@font-face {
    font-family: "Dodge";
    src: url('../fonts/DODGE.ttf') format("truetype");
}

@font-face {
    font-family: "Bebas";
    src: url('../fonts/BebasNeue Bold.otf') format("truetype");
}

@font-face {
    font-family: "Candal";
    src: url('../fonts/Candal.ttf') format("truetype");
}

/* Core */

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    text-align: center;
    overflow-x: hidden;
    background-color: #2B263A;
}

body {
    position: relative;
}

section {
    position: relative;
    height: 100%;
    width: 100%;
}

.fullscreen {
    position: absolute;
    background-size: cover;
    background-position-y: bottom;
    height: 100%;
    width: 100%;
}

.text {
    color: white;
}

.grid {
    display: grid;
}

#logo {
    position: fixed;
    background-size: cover;
    top: 3rem;
    left: 3rem;
    height: 5rem;
    width: 5rem;
    background-image: url("../img/logo.png");
    z-index: 1000;
}

/* Hero section */

#hero>#background {
    z-index: 0;
}

#hero>#content {
    grid-template-rows: repeat(3, 1fr);
}

#timer, #header {
    z-index: 1;
}

#foreground {
    z-index: 2;
    background-image: url('../img/heroForeground.png');
}

#planets {
    background-image: url('../img/planets.png');
}

#stars {
    background-image: url('../img/stars.png');
}

#falcon {
    background-image: url('../img/falcon.png');
}

#meteor {
    background-image: url('../img/meteor.png');
}

#redirectButtons * {
    display: inline-block;
    position: relative;
    top: 5rem;
    background-size: cover;
    z-index: 100;
}

#ticketsBtn {
    width: 12.7rem;
    height: 8.625rem;
    margin: 0 auto;
    background-image: url('../img/ticketsBtn.png');
}

.secondaryBtn {
    width: 9.525rem;
    height: 6.46875rem;
    top: 4.2rem !important;
}

#volunteerBtn {
    margin: 0 5rem 0 auto;
    background-image: url('../img/volunteer.png');
}

#mentorBtn {
    margin: 0 auto 0 5rem;
    background-image: url('../img/mentor.png');
}

/* Timer */

#timer {
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas: "d h m s" "d h m s";
    align-items: start;
    list-style: none;
    margin: 0 10%;
}

.timerText {
    font-family: Dodge;
    font-size: 1.5rem;
    position: relative;
    top: -1rem;
    padding: 0;
    margin: 0;
}

.timerNumber {
    font-family: Bebas;
    font-size: 6rem;
    padding: 0;
    margin: 0;
}

/* Title */

#title {
    position: relative;
    font-family: "Dodge";
    font-size: 6rem;
    width: 100%;
    margin: -7% 0 0 0;
    z-index: 1000;
}

#eventInfo {
    position: relative;
    top: -1.4rem;
    font-family: "Bebas";
    font-size: 2rem;
    z-index: 1000;
}

/* FAQ Section */

#faq {
    top: -1px;
    height: 189%;
    background-image: url('../img/faqBG.png');
    background-position-y: top;
    background-size: cover;
    z-index: 100;
}

#faqTitle {
    position: relative;
    background-image: url('../img/faqRibbon.png');
    background-size: cover;
    top: 4rem;
    width: 22rem;
    height: 6rem;
    margin: 0 auto 8rem auto;
}

#faqGrid {
    position: relative;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 0;
    grid-row-gap: 3em;
    z-index: 999999999;
    align-items: center;
    justify-content: center;
    margin-bottom: 5em;
    width: 100%;
}

.faqQuestion {
    position: relative;
    bottom: 0;
    margin: 0 auto;
    height: 370px;
    width: 290px;
}

.faqQuestion:hover {
    box-shadow: 0 -10px 100px rgba(138, 138, 138, 0.3);
}

.questionBG {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 120px 30px 195px;
    grid-row-gap: 0;
    height: 98%;
    width: 100%;
    background-color: #231F30;
}

.questionIcon {
    color: white;
    margin: auto;
    position: relative;
}

.questionTitle {
    height: 100%;
    position: relative;
    top: -30px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-weight: 500;
    margin-left: 5px;
    margin-right: 5px;
    font-size: 22px;
}

.questionText {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-style: bold;
    font-size: 15px;
    height: 100%;
    line-height: 195px;
    text-align: center;
    margin-left: 5px;
    margin-right: 5px;
}

span {
    display: inline-block;
    vertical-align: middle;
    margin-left: 0.5em;
    margin-right: 0.5em;
    line-height: normal;
}

.cyanMarker {
    background-color: #13C3D2
}

.redMarker {
    background-color: #FC68AB
}

.orangeMarker {
    background-color: #F49460
}

/* Sponsors section */

#sponsors {
    height: auto;
    width: 100%;
    background-image: url('../img/sponsorsBG.png');
    background-size: cover;
}

#sponsorsTitle {
    position: relative;
    background-image: url('../img/sponsorsRibbon.png');
    background-size: cover;
    top: 8rem;
    width: 37.5rem;
    height: 6rem;
    margin: 3rem auto 12rem auto;
}

#sponsors header {
    font-family: Dodge;
    font-size: 2.3rem;
}

#sponsors img {
    background-size: cover;
    height: auto;
    margin: 3.5rem auto;
}

#gold > header {
    color: #e8bc03;
}

#webApps {
    width: 40rem;
}

#silver > header {
    color: white;
}

#githubLogo {
    width: 23rem;
}

#bloomberg {
    width: 33rem;
    position: relative;
    left: 5rem;
    top: -0.3rem;
}

#bronze > header {
    color: #cd7f32;
}

#morganStanley {
    width: 37rem;
}

/* Footer */

#footer {
    padding-top: 3rem;
    display: block;
    height: 8em;
}

#footerText {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 1.2rem;
}

.footerLogos {
    position: relative;
    top: -1rem;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-areas: "f t g";
    align-items: center;
    grid-gap: 2em;
    margin: 0 auto;
    height: 50%;
    width: 10.5em;
}

.footerLogo {
    height: 2em;
    width: 2em;
    background-size: cover;
    background-color: transparent;
}

#facebook {
    grid-area: f;
    background-image: url("../img/facebookLogo.png");
}

#twitter {
    left: -0.25em;
    width: 2.5em;
    grid-area: t;
    background-image: url("../img/twitterLogo.png");
}

#github {
    grid-area: g;
    background-image: url("../img/githubLogo.png");
}

